<resources>
    <string name="app_name">Projekat</string>
    <string name="naziv">Ime</string>
    <string name="porodica">Porodica</string>
    <string name="opisslike">Slika biljke</string>
    <string name="ime">Naziv biljke</string>
    <string name="upozorenje">Tekst upozorenja</string>
    <string name="korist1">korist 1</string>
    <string name="korist2">korist 2</string>
    <string name="korist3">korist 3</string>
    <string name="okus">Profil okusa</string>
    <string name="jelo1">jelo 1</string>
    <string name="jelo2">jelo 2</string>
    <string name="jelo3">jelo 3</string>
    <string name="porodica1">Porodica</string>
    <string name="ktip1">Prvi klimatski tip</string>
    <string name="ztip1">Prvi zemljišni tip</string>
    <string name="reset">Reset</string>
    <string name="dodaj">Dodaj</string>
    <string name="form">Form</string>
    <string name="unos_naziva">Unesi naziv</string>
    <string name="unos_porodice">Unesi porodicu</string>
    <string name="unos_medicinsko">Unesi medicinsko upozorenje</string>
    <string name="unos_jela">Unesi jelo</string>
    <string name="odabir_okusa">Odaberi profil okusa</string>
    <string name="unos">Unos podataka</string>
    <string name="opis_okusa">Okus</string>
    <string name="medicina">Odaberi medicinske koristi</string>
    <string name="klimaodabir">Odaberi klimatske tipove</string>
    <string name="zemljaodabir">Odaberi zemljisne tipove</string>
    <string name="listajela">Dodana jela za biljku</string>
    <string name="dodajjelo">Dodaj jelo</string>
     <string name="dodajbiljku">Dodaj biljku</string>
    <string name="uslikajbiljku">Uslikaj biljku</string>
    <string name="okusError">Mora biti odabran jedan okus</string>
    <string name="medicinskaKoristError">Mora biti odabrana bar jedna medicinska korist</string>
    <string name="klimatskiError">Mora biti odabrana bar jedna klima</string>
    <string name="zemljisniError">Mora biti odabrano bar jedno zemljiste</string>
    <string name="praznaError">Mora biti dodano barem jedno jelo u listi jela</string>
    <string name="duplikatError">Jelo je već dodano u listi</string>
    <string name="dozvolaKamereError">Dozvola za kameru je odbijena</string>
    <string name="pretraga">Brza pretraga</string>
    <string name="unospretrage">Unesi tekst</string>
    <string name="latinskiError">Naziv mora imati i latinski naziv unesen</string>
    <string name="provjerena">checked</string>
</resources>